Updates build script.